k8s/build/dice-game-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckey-admin
  labels:
    app: ckey-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckey-admin
  template:
    metadata:
      labels:
        app: ckey-admin
    spec:
      containers:
      - name: ckey-admin
        image: bartosz95/ckey
        args: ["start --import-realm --optimized"]
        ports:
        - name: container-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - dice-game-admin
  rules:
  - host: dice-game-admin
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ckey-admin
            port:
              number: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ckey-admin
  labels:
    app: ckey-admin
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: ckey-admin
  type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - image: mongo-express
        name: mongo-express
        ports:
        - name: container-port
          containerPort: 8081
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /db/$2
spec:
  tls:
    - hosts:
      - dice-game
  rules:
  - host: dice-game
    http:
      paths:
      - path: /db(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 80
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  type: LoadBalancer
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: mongo-express
---
